--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Assignment Solution for Module 4</title>
+    <title>Assignment Solution for Module 4 by Shubham Stpt</title>
     <script src="SpeakHello.js"></script>
     <script src="SpeakGoodBye.js"></script>
     <script src="script.js"></script>
 </head>
 
 <body>
-    <h1>Solution of Assignment 4</h1>
-    <p>Check out the console in the web developer tools to see if it works!</p>
+    <h1>Solution of Assignment 4 by Shubham Stpt</h1>
+    <p>Check out the console in the web developer tools to see if it works or not!</p>
 </body>
 
 </html>
